@@ -1,6 +1,8 @@
 package com.mjc.school.service.author.impl;
 
 import com.mjc.school.entity.Author;
+import com.mjc.school.exception.RepositoryException;
+import com.mjc.school.exception.ServiceException;
 import com.mjc.school.exception.SortException;
 import com.mjc.school.repository.author.AuthorRepository;
 import com.mjc.school.repository.news.NewsRepository;
@@ -32,8 +34,12 @@ public class AuthorServiceImpl implements AuthorService {
      * @return the boolean
      */
     @Override
-    public boolean create(Author author) {
-        return authorRepository.create(author);
+    public boolean create(Author author) throws ServiceException {
+        try {
+            return authorRepository.create(author);
+        } catch (RepositoryException e) {
+            throw new ServiceException(e);
+        }
     }
 
     /**
@@ -43,9 +49,13 @@ public class AuthorServiceImpl implements AuthorService {
      * @return the boolean
      */
     @Override
-    public boolean delete(long id) {
-        return newsRepository.deleteByAuthorId(id)
-                && authorRepository.delete(id);
+    public boolean delete(long id) throws ServiceException {
+        try {
+            return newsRepository.deleteByAuthorId(id)
+                    && authorRepository.delete(id);
+        } catch (RepositoryException e) {
+            throw new ServiceException(e);
+        }
     }
 
     /**
@@ -55,8 +65,12 @@ public class AuthorServiceImpl implements AuthorService {
      * @return the boolean
      */
     @Override
-    public boolean update(Author author) {
-        return authorRepository.update(author);
+    public boolean update(Author author) throws ServiceException {
+        try {
+            return authorRepository.update(author);
+        } catch (RepositoryException e) {
+            throw new ServiceException(e);
+        }
     }
 
     /**
@@ -65,8 +79,12 @@ public class AuthorServiceImpl implements AuthorService {
      * @return the list
      */
     @Override
-    public List<Author> findAllAuthors() {
-        return authorRepository.findAllAuthors();
+    public List<Author> findAllAuthors() throws ServiceException {
+        try {
+            return authorRepository.findAllAuthors();
+        } catch (RepositoryException e) {
+            throw new ServiceException(e);
+        }
     }
 
     /**
@@ -76,8 +94,12 @@ public class AuthorServiceImpl implements AuthorService {
      * @return the author
      */
     @Override
-    public Author findById(long id) {
-        return authorRepository.findById(id);
+    public Author findById(long id) throws ServiceException {
+        try {
+            return authorRepository.findById(id);
+        } catch (RepositoryException e) {
+            throw new ServiceException(e);
+        }
     }
 
     /**
@@ -87,15 +109,19 @@ public class AuthorServiceImpl implements AuthorService {
      * @return the list
      */
     @Override
-    public List<Author> findByPartOfName(String partOfName) {
-        Pattern p = Pattern.compile(partOfName);
-        return findAllAuthors()
-                .stream()
-                .filter(author ->
-                        (p.matcher(author.getName()).find())
-                                || (p.matcher(author.getName()).lookingAt())
-                                || (author.getName().matches(partOfName))
-                ).collect(Collectors.toList());
+    public List<Author> findByPartOfName(String partOfName) throws ServiceException {
+        try {
+            Pattern p = Pattern.compile(partOfName.toLowerCase());
+            return authorRepository.findAllAuthors()
+                    .stream()
+                    .filter(author ->
+                            (p.matcher(author.getName().toLowerCase()).find())
+                                    || (p.matcher(author.getName().toLowerCase()).lookingAt())
+                                    || (author.getName().toLowerCase().matches(partOfName.toLowerCase()))
+                    ).toList();
+        } catch (RepositoryException e) {
+            throw new ServiceException(e);
+        }
     }
 
 
@@ -106,8 +132,12 @@ public class AuthorServiceImpl implements AuthorService {
      * @return the author
      */
     @Override
-    public Author findByNewsId(long newsId) {
-        return authorRepository.findByNewsId(newsId);
+    public Author findByNewsId(long newsId) throws ServiceException {
+        try {
+            return authorRepository.findByNewsId(newsId);
+        } catch (RepositoryException e) {
+            throw new ServiceException(e);
+        }
     }
 
     /**
@@ -116,8 +146,13 @@ public class AuthorServiceImpl implements AuthorService {
      * @return the map
      */
     @Override
-    public List<Entry<Author, Long>> selectAllAuthorsWithAmountOfWrittenNews() {
-        return authorRepository.selectAllAuthorsWithAmountOfWrittenNews();
+    public List<Entry<Author, Long>> selectAllAuthorsWithAmountOfWrittenNews()
+            throws ServiceException {
+        try {
+            return authorRepository.selectAllAuthorsWithAmountOfWrittenNews();
+        } catch (RepositoryException e) {
+            throw new ServiceException(e);
+        }
     }
 
     /**
@@ -126,10 +161,16 @@ public class AuthorServiceImpl implements AuthorService {
      * @return the map
      */
     @Override
-    public List<Entry<Author, Long>> sortAllAuthorsWithAmountOfWrittenNewsDesc() {
-        List<Entry<Author, Long>> authorLongMapSorted = new LinkedList<>(authorRepository.selectAllAuthorsWithAmountOfWrittenNews());
-        authorLongMapSorted.sort(
-                new SortAuthorsWithAmountOfWrittenNewsComparatorImpl());
-        return authorLongMapSorted;
+    public List<Entry<Author, Long>> sortAllAuthorsWithAmountOfWrittenNewsDesc()
+            throws ServiceException {
+        try {
+            List<Entry<Author, Long>> authorLongMapSorted =
+                    new LinkedList<>(authorRepository.selectAllAuthorsWithAmountOfWrittenNews());
+            authorLongMapSorted.sort(
+                    new SortAuthorsWithAmountOfWrittenNewsComparatorImpl());
+            return authorLongMapSorted;
+        } catch (RepositoryException e) {
+            throw new ServiceException(e);
+        }
     }
 }
